## Process this file with automake to produce Makefile.in
AUTOMAKE_OPTIONS=	foreign

EXTRA_DIST =	bothdefs.h cl_cam.h cl_demo.h cl_ents.h cl_input.h \
		cl_main.h cl_parse.h cl_pred.h cl_skin.h cl_slist.h cl_tent.h client.h \
		crudefile.h game.h host.h \
		msg_ucmd.h net.h pmove.h \
		protocol.h server.h \
		sv_pr_cmds.h sv_progs.h world.h
