## Process this file with automake to produce Makefile.in
AUTOMAKE_OPTIONS=	foreign

EXTRA_DIST = \
		chase.h cl_cam.h cl_chat.h cl_demo.h cl_ents.h cl_http.h cl_input.h \
		cl_main.h cl_parse.h cl_pred.h cl_skin.h cl_slist.h cl_tent.h \
		client.h crudefile.h game.h host.h map_cfg.h server.h sv_gib.h \
		sv_demo.h sv_pr_cmds.h sv_pr_cpqw.h sv_pr_qwe.h sv_progs.h sv_qtv.h \
		sv_recorder.h
